@@ -36,6 +36,11 @@ Queue changes
  * Added queue options autopausebusy and autopauseunavail for automatically
    pausing a queue member when their device reports busy or congestion.
 
+CDR postgresql driver changes
+-----------------------------
+ * Added command "cdr show pgsql status" to check connection status
+
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 1.8 to Asterisk 10 -------------------
 ------------------------------------------------------------------------------
